# kangaroo-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py
kangaroo/cleaner/: text_cleaner.py
kangaroo/metrics/: print_metrics.py
tests/cleaner/: test_cleaner.py
